# neoswga

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  nightly.yml  publish.yml
benchmarks/: performance_benchmarks.py
docs/: API_REFERENCE.md  ARCHITECTURE_DIAGRAMS.md  AUDIT_REPORT_v3.0.md  CHANGELOG.md  DEVELOPER_GUIDE.md  E2E_VALIDATION_REPORT.md  FINAL_PRODUCTION_READINESS.md  FROM_RESULTS_TO_LAB.md  FUNCTIONAL_VALIDATION_REPORT.md  MODULE_REFERENCE.md  OPTIMIZER_UX_AUDIT.md  PRODUCTION_READINESS_REPORT.md  QUICK_START.md  README.md  SCIENCE_CITATIONS.md  STEP1_AUDIT_REPORT.md  STEP2_AUDIT_REPORT.md  STEP3_AUDIT_REPORT.md  STEP4_AUDIT_REPORT.md  SWGA_SCIENCE.md  TROUBLESHOOTING.md  active-learning-guide.md  adaptive-qa-guide.md  api_reference_report.md  migration-3.6-to-3.7.md  migration-guide.md  multi-genome-guide.md  optimization_guide.md  params-reference.md  production-scenarios.md  report_module.md  simulator-guide.md  user-guide.md  user_guide_reports.md
docs/development/: algorithms.md  architecture.md  deployment.md  implementation-guide.md  optimizers.md
docs/plans/: 2026-02-03-repo-cleanup-design.md  2026-02-04-export-and-lab-integration.md
docs/superpowers/plans/: 2026-04-19-phase-0-stop-the-bleeding.md  2026-04-20-phase-11-onwards-optimizer-quality.md
docs/superpowers/specs/: 2026-04-19-phase-0-stop-the-bleeding-design.md  2026-04-19-production-readiness-roadmap.md
examples/ecoli_environmental/: README.md  download_genome.sh  params.json
examples/equiphi29_scenario/: README.md  params.json
examples/gc_extreme/: README.md  params.json
examples/host_background_bloom/: README.md  params.json
examples/multi_genome_blacklist/: README.md  params.json
examples/plasmid_example/: README.md  params.json
neoswga/: __init__.py  cli_unified.py  logging_config.py
neoswga/core/: __init__.py  active_learning.py  adaptive_filters.py  adaptive_search.py  additive_interactions.py  additive_optimizer.py  additives.py  advanced_features.py  amplicon_network.py  auto_swga_pipeline.py  background_aware_optimizer.py  background_filter.py  background_prefilter.py  background_registry.py  base_optimizer.py  clique_optimizer.py  condition_suggester.py  coverage.py  deep_learning.py  dimer.py  dimer_network_analyzer.py  dimer_validator.py  dominating_set_adapter.py  dominating_set_optimizer.py  efficiency_predictor.py  equiphi29_optimizer.py  exceptions.py  experimental_tracker.py  export.py  filter.py  gc_adaptive_strategy.py  genetic_algorithm.py  genome_analysis.py  genome_io.py  gpu_acceleration.py  greedy_optimizer.py  hybrid_optimizer.py  improved_pipeline.py  integrated_quality_scorer.py  kmer.py  (+52 more)
neoswga/core/experimental/: __init__.py  cooperative_binding_selector.py  hybrid_primer_strategy.py  simulate_command.py
neoswga/core/report/: __init__.py  executive_summary.py  metrics.py  quality.py  technical_report.py  utils.py  validation.py  visualizations.py
neoswga/core/schema/: __init__.py  params.schema.json
scripts/: csv_to_experimental_results_json.py  generate_training_data.py  render_schema.py  retrain_rf_model.py  train_enhanced_rf.py
scripts/analysis/: analyze_binding_distribution.py  analyze_qa_bias.py  analyze_results.py
scripts/benchmarking/: benchmark_improvements.py  benchmark_suite.py  run_benchmarks.py
scripts/simulation/: detailed_replication_simulation.py  simulate_francisella_primers.py  simulate_francisella_vs_human.py
scripts/utilities/: create_test_dataset.py  diagnose_terminal_tm.py  generate_simulation_report.py
test_data/: bacillus_primers.txt  burkholderia_primers.txt  ecoli_primers.txt  francisella_primers.txt  test_metadata.json  yersinia_primers.txt
tests/: __init__.py  conftest.py  test_12bp_pipeline.py  test_adaptive_filter_tm.py  test_adaptive_gc_auto.py  test_adaptive_qa.py  test_additive_corrections.py  test_additive_interactions.py  test_additive_optimizer.py  test_additive_propagation_scoring.py  test_application_selection_weights.py  test_application_weights.py  test_audit_features.py  test_auto_swga_pipeline.py  test_blacklist_params_integration.py  test_cli_smoke.py  test_cli_surface_consistency.py  test_contract_set_quality_weighted.py  test_core_optimize_blacklist_guard.py  test_csv_to_experimental_results.py  test_current_set_improvement_cli.py  test_dimer.py  test_dimer_legacy.py  test_dimer_network_analyzer.py  test_dimer_network_scoring.py  test_dimer_temperature.py  test_dimer_thermodynamic.py  test_doctor_cli.py  test_dominating_set_optimizer.py  test_empty_candidate_pool.py  test_enhanced_features.py  test_export.py  test_filter.py  test_filter_edge_cases.py  test_gc_dependent_corrections.py  test_genetic_algorithm_eval.py  test_genetic_algorithm_integration.py  test_genome_io.py  test_grade_vs_score_alignment.py  test_hybrid_optimizer.py  (+68 more)
tests/integration/: conftest.py  test_additive_ranking_e2e.py  test_blacklist_scenario_e2e.py  test_gc_extreme_e2e.py  test_integration.py  test_multi_genome_e2e.py  test_output_column_parity.py  test_pipeline_e2e.py  test_plasmid_golden_snapshot.py  test_polymerase_scenarios_e2e.py  test_scale_memory.py
tests/integration/equiphi29_baseline/: params.json
tests/integration/phi29_baseline/: params.json
tests/integration/phi29_with_bg/: params.json
tests/report/: conftest.py  test_e2e_report.py  test_metrics.py  test_quality.py  test_validation_surfaced.py  test_visualizations.py
tests/report/fixtures/bacillus_results/: filter_stats.json  params.json  step4_improved_df.csv
