[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neoswga"
version = "3.0.0"
description = "Enhanced Selective Whole Genome Amplification (SWGA) primer design with advanced thermodynamics and optimization. Requires Jellyfish 2.x (external): conda install -c bioconda jellyfish"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Andreas Sjodin", email = "andreas.sjodin@example.com"},
]
maintainers = [
    {name = "Andreas Sjodin", email = "andreas.sjodin@example.com"},
]
keywords = [
    "bioinformatics",
    "genomics",
    "primer-design",
    "SWGA",
    "whole-genome-amplification",
    "thermodynamics",
    "genetic-algorithm",
    "machine-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.24,<3",
    "pandas>=1.5,<3",
    "scipy>=1.10,<2",
    "scikit-learn>=1.0,<2",
    "h5py>=3.0,<4",
    "networkx>=2.8,<4",
    "biopython>=1.80,<2",
    "joblib>=1.0,<2",
    "matplotlib>=3.5,<4",
    "seaborn>=0.12,<1",
    "openpyxl>=3.0,<4",
]

[project.optional-dependencies]
improved = [
    "pybloom-live>=3.1.0",
    "mip>=1.13.0",
]
fast = [
    "pyahocorasick>=2.0.0",
]
interactive = [
    "plotly>=5.0.0",
]
gpu = [
    "cupy-cuda11x>=11.0.0",
]
gpu-cuda12 = [
    "cupy-cuda12x>=12.0.0",
]
deep-learning-torch = [
    "torch>=1.10.0",
]
deep-learning-tf = [
    "tensorflow>=2.8.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "hypothesis>=6.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "isort>=5.10.0",
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
]
all = [
    "pybloom-live>=3.1.0",
    "mip>=1.13.0",
    "pyahocorasick>=2.0.0",
    "plotly>=5.0.0",
    "hypothesis>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/FOI-Bioinformatics/neoswga"
Documentation = "https://github.com/FOI-Bioinformatics/neoswga/blob/main/README.md"
Repository = "https://github.com/FOI-Bioinformatics/neoswga"
"Bug Tracker" = "https://github.com/FOI-Bioinformatics/neoswga/issues"

[project.scripts]
neoswga = "neoswga.cli_unified:main"

[tool.setuptools]
packages = ["neoswga", "neoswga.core", "neoswga.core.report", "neoswga.core.experimental"]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.package-data]
neoswga = ["*.md"]
"neoswga.core" = ["*.md", "models/*.p"]

[tool.black]
line-length = 100
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
]
markers = [
    "integration: Integration tests requiring external data",
    "slow: Slow tests that take significant time",
]
filterwarnings = [
    "ignore:Trying to unpickle estimator:sklearn.exceptions.InconsistentVersionWarning",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
