[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neoswga"
version = "3.6.0"
description = "Enhanced Selective Whole Genome Amplification (SWGA) primer design with advanced thermodynamics and optimization. Requires Jellyfish 2.x (external): conda install -c bioconda jellyfish"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Andreas Sjodin", email = "andreas.sjodin@foi.se"},
]
maintainers = [
    {name = "Andreas Sjodin", email = "andreas.sjodin@foi.se"},
]
keywords = [
    "bioinformatics",
    "genomics",
    "primer-design",
    "SWGA",
    "whole-genome-amplification",
    "thermodynamics",
    "genetic-algorithm",
    "machine-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.24,<3",
    "pandas>=1.5,<3",
    "scipy>=1.10,<2",
    "scikit-learn>=1.0,<2",
    "h5py>=3.0,<4",
    "networkx>=2.8,<4",
    "biopython>=1.80,<2",
    "joblib>=1.0,<2",
    "jsonschema>=4.0,<5",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.5,<4",
    "seaborn>=0.12,<1",
    "openpyxl>=3.0,<4",
]
improved = [
    "pybloom-live>=3.1.0",
    "mip>=1.13.0",
]
fast = [
    "pyahocorasick>=2.0.0",
]
interactive = [
    "plotly>=5.0.0",
]
gpu = [
    "cupy-cuda11x>=11.0.0",
]
gpu-cuda12 = [
    "cupy-cuda12x>=12.0.0",
]
deep-learning-torch = [
    "torch>=1.10.0",
]
deep-learning-tf = [
    "tensorflow>=2.8.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-timeout>=2.0.0",
    "hypothesis>=6.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "ruff>=0.5.0",
    "mypy>=1.0",
    "isort>=5.10.0",
    "pre-commit>=3.0.0",
    "build>=1.0.0",
    "twine>=5.0.0",
    "jsonschema>=4.0,<5",
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
]
all = [
    "pybloom-live>=3.1.0",
    "mip>=1.13.0",
    "pyahocorasick>=2.0.0",
    "plotly>=5.0.0",
    "matplotlib>=3.5,<4",
    "seaborn>=0.12,<1",
    "openpyxl>=3.0,<4",
    "hypothesis>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/FOI-Bioinformatics/neoswga"
Documentation = "https://github.com/FOI-Bioinformatics/neoswga/blob/main/README.md"
Repository = "https://github.com/FOI-Bioinformatics/neoswga"
"Bug Tracker" = "https://github.com/FOI-Bioinformatics/neoswga/issues"

[project.scripts]
neoswga = "neoswga.cli_unified:main"

[tool.setuptools]
packages = ["neoswga", "neoswga.core", "neoswga.core.report", "neoswga.core.experimental", "neoswga.core.schema"]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.package-data]
neoswga = ["*.md"]
"neoswga.core" = ["*.md", "models/*.p"]
"neoswga.core.schema" = ["*.json"]

[tool.black]
line-length = 100
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["examples", "tests/integration", "validation_tests"]

[tool.ruff.lint]
# Start with a small, high-signal rule set. Expand over time.
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
# Keep the baseline green: allow common patterns we do not plan to fix now.
ignore = [
  "E501",  # line length (enforced by black)
  "B008",  # function-call in defaults (argparse-heavy CLI relies on this)
  "SIM108", # ternary-vs-if readability preference
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
# Non-strict baseline; tighten module-by-module over time.
no_strict_optional = true
follow_imports = "silent"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
]
markers = [
    "integration: Integration tests requiring external data",
    "slow: Slow tests that take significant time",
    "scale: Bacterial-scale memory/runtime tests (opt-in; nightly workflow only)",
]
filterwarnings = [
    "ignore:Trying to unpickle estimator:sklearn.exceptions.InconsistentVersionWarning",
]

# (mypy config merged into the earlier [tool.mypy] block above)
